--- a/FirstWebApplication/appsettings.json
+++ b/FirstWebApplication/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=WebApplication1;Trusted_Connection=True;"
+  },
+  "Author": {
+    "name": "anas",
   }
 }
