--- a/FirstWebApplication/appsettings.json
+++ b/FirstWebApplication/appsettings.json
@@ -10,7 +10,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS01;Database=WebApplication1;Trusted_Connection=True;"
   },
-  "Author": {
-    "name": "anas",
+  "AppInfo": {
+    "Author": {
+      "Name":  "anas zakarneh",
+    }
   }
 }
